0.4.15/_sources/gallery/new_theme.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/new_theme.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_new_theme.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_new_theme.py:


New theme
=========

Displays an image and sets the theme to new custom theme.

.. GENERATED FROM PYTHON SOURCE LINES 8-40



.. image-sg:: /gallery/images/sphx_glr_new_theme_001.png
   :alt: new theme
   :srcset: /gallery/images/sphx_glr_new_theme_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    Originally themes ('dark', 'light', 'system')
    New themes ('dark', 'light', 'blue', 'system')






|

.. code-block:: default


    from skimage import data
    import napari
    from napari.utils.theme import available_themes, get_theme, register_theme


    # create the viewer with an image
    viewer = napari.view_image(data.astronaut(), rgb=True, name='astronaut')

    # List themes
    print('Originally themes', available_themes())

    blue_theme = get_theme('dark', False)
    blue_theme.name = "blue"
    blue_theme.icon = (
        'rgb(0, 255, 255)'  # you can provide colors as rgb(XXX, YYY, ZZZ)
    )
    blue_theme.background = 28, 31, 48  # or as tuples
    blue_theme.foreground = [45, 52, 71]  # or as list
    blue_theme.primary = '#50586c'  # or as hexes
    blue_theme.current = 'orange'  # or as color name

    register_theme('blue', blue_theme)

    # List themes
    print('New themes', available_themes())

    # Set theme
    viewer.theme = 'blue'

    if __name__ == '__main__':
        napari.run()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  19.835 seconds)


.. _sphx_glr_download_gallery_new_theme.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: new_theme.py <new_theme.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: new_theme.ipynb <new_theme.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
